--- a/index.html
+++ b/index.html
@@ -8,85 +8,80 @@
   </head>
   <body>
     <div style="width: 100%; display: flex">
-      <form class="n-form" action="#">
-        <h2>Шаблон формы</h2>
-
-        <fieldset>
-          <legend>Персональные данные</legend>
-          <ul>
-            <li>
-              <label for="name">Контактный телефон</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">Оправа</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">Линзы</label>
-              <input type="text" />
-            </li>
-            <li>
-              <input type="text" />
-            </li>
-            <li>
-              <!--вложенный-->
-              <div class="n-wrapper">
-                <div class="n-inner">
-                  <!--item-->
-                  <ul class="n-inner-item">
-                    <li>
-                      <label for="name">OD sph</label>
-                      <input type="text" />
-                    </li>
-                    <li>
-                      <label for="name">cyl</label>
-                      <input type="text" />
-                    </li>
-                    <li>
-                      <label for="name">ax</label>
-                      <input type="text" />
-                    </li>
-                  </ul>
-                  <!--item-->
-                  <ul class="n-inner-item">
-                    <li>
-                      <label for="name">OS sph</label>
-                      <input type="text" />
-                    </li>
-                    <li>
-                      <label for="name">cyl</label>
-                      <input type="text" />
-                    </li>
-                    <li>
-                      <label for="name">ax</label>
-                      <input type="text" />
-                    </li>
-                  </ul>
-                </div>
-                <ul>
+      <div class="n-form">
+        <ul>
+          <li>
+            <label for="name">Контактный телефон</label>
+            <input type="text" />
+          </li>
+          <li>
+            <label for="name">Оправа</label>
+            <input type="text" />
+          </li>
+          <li>
+            <label for="name">Линзы</label>
+            <input type="text" />
+          </li>
+          <li>
+            <input type="text" />
+          </li>
+          <li>
+            <!--вложенный-->
+            <div class="n-wrapper">
+              <div class="n-inner">
+                <!--item-->
+                <ul class="n-inner-item">
                   <li>
-                    <label for="name">рц</label>
+                    <label for="name">OD sph</label>
+                    <input type="text" />
+                  </li>
+                  <li>
+                    <label for="name">cyl</label>
+                    <input type="text" />
+                  </li>
+                  <li>
+                    <label for="name">ax</label>
+                    <input type="text" />
+                  </li>
+                </ul>
+                <!--item-->
+                <ul class="n-inner-item">
+                  <li>
+                    <label for="name">OS sph</label>
+                    <input type="text" />
+                  </li>
+                  <li>
+                    <label for="name">cyl</label>
+                    <input type="text" />
+                  </li>
+                  <li>
+                    <label for="name">ax</label>
                     <input type="text" />
                   </li>
                 </ul>
               </div>
-            </li>
-            <li>
-              <label for="name">Примечание</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">Дата приема</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">Дата выдачи</label>
-              <input type="text" />
-            </li>
-          </ul>
-        </fieldset>
-      </form>
+              <ul>
+                <li>
+                  <label for="name">рц</label>
+                  <input type="text" />
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <label for="name">Примечание</label>
+            <input type="text" />
+          </li>
+          <li>
+            <label for="name">Дата приема</label>
+            <input type="text" />
+          </li>
+          <li>
+            <label for="name">Дата выдачи</label>
+            <input type="text" />
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
