--- a/index.html
+++ b/index.html
@@ -7,80 +7,121 @@
     <title>Document</title>
   </head>
   <body>
-    <div style="width: 100%; display: flex">
+    <div style="display: flex">
       <div class="n-form">
-        <ul>
-          <li>
-            <label for="name">Контактный телефон</label>
-            <input type="text" />
-          </li>
-          <li>
-            <label for="name">Оправа</label>
-            <input type="text" />
-          </li>
-          <li>
-            <label for="name">Линзы</label>
-            <input type="text" />
-          </li>
-          <li>
-            <input type="text" />
-          </li>
-          <li>
-            <!--вложенный-->
-            <div class="n-wrapper">
-              <div class="n-inner">
-                <!--item-->
-                <ul class="n-inner-item">
+        <div class="n-form-right">
+          <ul>
+            <li>
+              <label for="name">Контактный телефон</label>
+              <input type="text" />
+            </li>
+            <li>
+              <label for="name">Оправа</label>
+              <input type="text" />
+            </li>
+            <li>
+              <label for="name">Линзы</label>
+              <input type="text" />
+            </li>
+            <li>
+              <input type="text" />
+            </li>
+            <li>
+              <!--вложенный-->
+              <div class="n-wrapper">
+                <div class="n-inner">
+                  <!--item-->
+                  <ul class="n-inner-item">
+                    <li>
+                      <label for="name">OD sph</label>
+                      <input type="text" />
+                    </li>
+                    <li>
+                      <label for="name">cyl</label>
+                      <input type="text" />
+                    </li>
+                    <li>
+                      <label for="name">ax</label>
+                      <input type="text" />
+                    </li>
+                  </ul>
+                  <!--item-->
+                  <ul class="n-inner-item">
+                    <li>
+                      <label for="name">OS sph</label>
+                      <input type="text" />
+                    </li>
+                    <li>
+                      <label for="name">cyl</label>
+                      <input type="text" />
+                    </li>
+                    <li>
+                      <label for="name">ax</label>
+                      <input type="text" />
+                    </li>
+                  </ul>
+                </div>
+                <ul>
                   <li>
-                    <label for="name">OD sph</label>
-                    <input type="text" />
-                  </li>
-                  <li>
-                    <label for="name">cyl</label>
-                    <input type="text" />
-                  </li>
-                  <li>
-                    <label for="name">ax</label>
-                    <input type="text" />
-                  </li>
-                </ul>
-                <!--item-->
-                <ul class="n-inner-item">
-                  <li>
-                    <label for="name">OS sph</label>
-                    <input type="text" />
-                  </li>
-                  <li>
-                    <label for="name">cyl</label>
-                    <input type="text" />
-                  </li>
-                  <li>
-                    <label for="name">ax</label>
+                    <label for="name">рц</label>
                     <input type="text" />
                   </li>
                 </ul>
               </div>
-              <ul>
-                <li>
-                  <label for="name">рц</label>
-                  <input type="text" />
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="name">Примечание</label>
-            <input type="text" />
-          </li>
-          <li>
-            <label for="name">Дата приема</label>
-            <input type="text" />
-          </li>
-          <li>
-            <label for="name">Дата выдачи</label>
-            <input type="text" />
-          </li>
-        </ul>
+            </li>
+            <li>
+              <label for="name">Примечание</label>
+              <input type="text" />
+            </li>
+            <li>
+              <label for="name">Дата приема</label>
+              <input type="text" />
+            </li>
+            <li>
+              <label for="name">Дата выдачи</label>
+              <input type="text" />
+            </li>
+          </ul>
+        </div>
+        <div class="n-form-left">
+          <ul>
+            <li>
+              <label for="name">Стоимость</label>
+            </li>
+            <li>
+              <label for="name">оправа</label>
+              <input type="text" />
+            </li>
+            <li>
+              <label for="name">линзы</label>
+              <input type="text" />
+            </li>
+            <li>
+              <label for="name">работа</label>
+              <input type="text" />
+            </li>
+            <li>
+              <label for="name">сумма</label>
+              <input type="text" />
+            </li>
+            <li>
+              <label for="name">скидка</label>
+              <input type="text" />
+            </li>
+            <li>
+              <label for="name">Итого</label>
+              <input type="text" />
+            </li>
+            <li>
+              <label for="name">оплачено</label>
+              <input type="text" />
+            </li>
+            <li>
+              <label for="name">доплата</label>
+              <input type="text" />
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
