--- a/index.html
+++ b/index.html
@@ -3,126 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Table with Two Columns</title>
+    <style>
+      table {
+        max-width: 700px;
+        width: 100%;
+        border-collapse: collapse;
+      }
+      th,
+      td {
+        border: 1px solid black;
+        padding: 8px;
+        text-align: left;
+      }
+      th {
+        width: 70%;
+      }
+      td {
+        width: 30%;
+      }
+    </style>
   </head>
   <body>
-    <div style="display: flex">
-      <div class="n-form">
-        <div class="n-form-right">
-          <ul>
-            <li>
-              <label for="name">Контактный телефон</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">Оправа</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">Линзы</label>
-              <input type="text" />
-            </li>
-            <li>
-              <input type="text" />
-            </li>
-            <li>
-              <!--вложенный-->
-              <div class="n-wrapper">
-                <div class="n-inner">
-                  <!--item-->
-                  <ul class="n-inner-item">
-                    <li>
-                      <label for="name">OD sph</label>
-                      <input type="text" />
-                    </li>
-                    <li>
-                      <label for="name">cyl</label>
-                      <input type="text" />
-                    </li>
-                    <li>
-                      <label for="name">ax</label>
-                      <input type="text" />
-                    </li>
-                  </ul>
-                  <!--item-->
-                  <ul class="n-inner-item">
-                    <li>
-                      <label for="name">OS sph</label>
-                      <input type="text" />
-                    </li>
-                    <li>
-                      <label for="name">cyl</label>
-                      <input type="text" />
-                    </li>
-                    <li>
-                      <label for="name">ax</label>
-                      <input type="text" />
-                    </li>
-                  </ul>
-                </div>
-                <ul>
-                  <li>
-                    <label for="name">рц</label>
-                    <input type="text" />
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <label for="name">Примечание</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">Дата приема</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">Дата выдачи</label>
-              <input type="text" />
-            </li>
-          </ul>
-        </div>
-        <div class="n-form-left">
-          <ul>
-            <li>
-              <label for="name">Стоимость</label>
-            </li>
-            <li>
-              <label for="name">оправа</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">линзы</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">работа</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">сумма</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">скидка</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">Итого</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">оплачено</label>
-              <input type="text" />
-            </li>
-            <li>
-              <label for="name">доплата</label>
-              <input type="text" />
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    <table>
+      <tr>
+        <th>
+          Контактный телефон
+          <span>.............</span>
+        </th>
+        <td>СТОИМОСТЬ</td>
+      </tr>
+      <tr>
+        <th>
+          Оправа
+          <span>.............</span>
+        </th>
+        <td>оправа<span>.............</span></td>
+      </tr>
+      <tr>
+        <th>
+          Линзы
+          <span>.............</span>
+        </th>
+        <td>
+          линзы
+          <span>.............</span>
+        </td>
+      </tr>
+      <tr>
+        <th></th>
+        <td>
+          работа
+          <span>.............</span>
+        </td>
+      </tr>
+      <tr>
+        <th>Header 5</th>
+        <td>Column 5</td>
+      </tr>
+      <tr>
+        <th>Header 6</th>
+        <td>Column 6</td>
+      </tr>
+    </table>
   </body>
 </html>
