--- a/index.html
+++ b/index.html
@@ -1,69 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table with Two Columns</title>
     <style>
       table {
         max-width: 700px;
         width: 100%;
-        border-collapse: collapse;
       }
-      th,
-      td {
-        border: 1px solid black;
-        padding: 8px;
-        text-align: left;
-      }
-      th {
+
+      .column1 {
         width: 70%;
+        background-color: #f2f2f2;
       }
-      td {
+
+      .column2 {
         width: 30%;
+        background-color: #ddd;
       }
     </style>
   </head>
   <body>
     <table>
       <tr>
-        <th>
-          Контактный телефон
-          <span>.............</span>
-        </th>
-        <td>СТОИМОСТЬ</td>
+        <td class="column1">Текст в первой колонке</td>
+        <td class="column2">Текст во второй колонке</td>
       </tr>
       <tr>
-        <th>
-          Оправа
-          <span>.............</span>
-        </th>
-        <td>оправа<span>.............</span></td>
+        <td class="column1">Текст в первой колонке</td>
+        <td class="column2">Текст во второй колонке</td>
       </tr>
       <tr>
-        <th>
-          Линзы
-          <span>.............</span>
-        </th>
-        <td>
-          линзы
-          <span>.............</span>
-        </td>
+        <td class="column1">Текст в первой колонке</td>
+        <td class="column2">Текст во второй колонке</td>
       </tr>
       <tr>
-        <th></th>
-        <td>
-          работа
-          <span>.............</span>
-        </td>
+        <td class="column1">Текст в первой колонке</td>
+        <td class="column2">Текст во второй колонке</td>
       </tr>
       <tr>
-        <th>Header 5</th>
-        <td>Column 5</td>
+        <td class="column1">Текст в первой колонке</td>
+        <td class="column2">Текст во второй колонке</td>
       </tr>
       <tr>
-        <th>Header 6</th>
-        <td>Column 6</td>
+        <td class="column1">Текст в первой колонке</td>
+        <td class="column2">Текст во второй колонке</td>
       </tr>
     </table>
   </body>
