--- a/index.html
+++ b/index.html
@@ -9,32 +9,48 @@
 
       .column1 {
         width: 70%;
-        background-color: #f2f2f2;
       }
 
       .column2 {
         width: 30%;
-        background-color: #ddd;
       }
     </style>
   </head>
   <body>
     <table>
       <tr>
-        <td class="column1">Текст в первой колонке</td>
+        <td class="column1">
+          Контактный телефон
+          <span>......</span>
+        </td>
         <td class="column2">Текст во второй колонке</td>
       </tr>
       <tr>
-        <td class="column1">Текст в первой колонке</td>
-        <td class="column2">Текст во второй колонке</td>
+        <td class="column1">
+          Оправа
+          <span>......</span>
+        </td>
+        <td class="column2">
+          оправа
+          <span>......</span>
+        </td>
       </tr>
       <tr>
-        <td class="column1">Текст в первой колонке</td>
-        <td class="column2">Текст во второй колонке</td>
+        <td class="column1">
+          линзы
+          <span>......</span>
+        </td>
+        <td class="column2">
+          линзы
+          <span>......</span>
+        </td>
       </tr>
       <tr>
-        <td class="column1">Текст в первой колонке</td>
-        <td class="column2">Текст во второй колонке</td>
+        <td class="column1">_________________</td>
+        <td class="column2">
+          работа
+          <span>......</span>
+        </td>
       </tr>
       <tr>
         <td class="column1">Текст в первой колонке</td>
