--- a/index.html
+++ b/index.html
@@ -53,8 +53,54 @@
         </td>
       </tr>
       <tr>
-        <td class="column1">Текст в первой колонке</td>
-        <td class="column2">Текст во второй колонке</td>
+        <td class="column1">
+          OD sph
+          <span>......</span>
+          cyl
+          <span>......</span>
+          ax
+          <span>......</span>
+          рц
+          <span>......</span>
+        </td>
+        <td class="column2">
+          сумма
+          <span>......</span>
+        </td>
+      </tr>
+      <tr>
+        <td class="column1">
+          OS sph
+          <span>......</span>
+          cyl
+          <span>......</span>
+          ax
+          <span>......</span>
+        </td>
+        <td class="column2">
+          скидка
+          <span>......</span>
+        </td>
+      </tr>
+      <tr>
+        <td class="column1">
+          Примечание
+          <span>......</span>
+        </td>
+        <td class="column2">
+          Итого
+          <span>......</span>
+        </td>
+      </tr>
+      <tr>
+        <td class="column1">
+          Дата приема
+          <span>......</span>
+        </td>
+        <td class="column2">
+          оплачено
+          <span>......</span>
+        </td>
       </tr>
       <tr>
         <td class="column1">Текст в первой колонке</td>
