--- a/index.html
+++ b/index.html
@@ -103,8 +103,14 @@
         </td>
       </tr>
       <tr>
-        <td class="column1">Текст в первой колонке</td>
-        <td class="column2">Текст во второй колонке</td>
+        <td class="column1">
+          Дата выдачи
+          <span>......</span>
+        </td>
+        <td class="column2">
+          доплата
+          <span>......</span>
+        </td>
       </tr>
     </table>
   </body>
