--- a/index.html
+++ b/index.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      table {
-        max-width: 700px;
-        width: 100%;
-      }
-
-      .column1 {
-        width: 70%;
-      }
-
-      .column2 {
-        width: 30%;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="style.css
+    "
+    />
   </head>
   <body>
     <table>
