--- a/index.html
+++ b/index.html
@@ -12,95 +12,95 @@
       <tr>
         <td class="column1">
           Контактный телефон
-          <span>......</span>
+          <span></span>
         </td>
         <td class="column2">Текст во второй колонке</td>
       </tr>
       <tr>
         <td class="column1">
           Оправа
-          <span>......</span>
+          <span></span>
         </td>
         <td class="column2">
           оправа
-          <span>......</span>
+          <span></span>
         </td>
       </tr>
       <tr>
         <td class="column1">
           линзы
-          <span>......</span>
+          <span></span>
         </td>
         <td class="column2">
           линзы
-          <span>......</span>
+          <span></span>
         </td>
       </tr>
       <tr>
         <td class="column1">_________________</td>
         <td class="column2">
           работа
-          <span>......</span>
+          <span></span>
         </td>
       </tr>
       <tr>
         <td class="column1">
           OD sph
-          <span>......</span>
+          <span></span>
           cyl
-          <span>......</span>
+          <span></span>
           ax
-          <span>......</span>
+          <span></span>
           рц
-          <span>......</span>
+          <span></span>
         </td>
         <td class="column2">
           сумма
-          <span>......</span>
+          <span></span>
         </td>
       </tr>
       <tr>
         <td class="column1">
           OS sph
-          <span>......</span>
+          <span></span>
           cyl
-          <span>......</span>
+          <span></span>
           ax
-          <span>......</span>
+          <span></span>
         </td>
         <td class="column2">
           скидка
-          <span>......</span>
+          <span></span>
         </td>
       </tr>
       <tr>
         <td class="column1">
           Примечание
-          <span>......</span>
+          <span></span>
         </td>
         <td class="column2">
           Итого
-          <span>......</span>
+          <span></span>
         </td>
       </tr>
       <tr>
         <td class="column1">
           Дата приема
-          <span>......</span>
+          <span></span>
         </td>
         <td class="column2">
           оплачено
-          <span>......</span>
+          <span></span>
         </td>
       </tr>
       <tr>
         <td class="column1">
           Дата выдачи
-          <span>......</span>
+          <span></span>
         </td>
         <td class="column2">
           доплата
-          <span>......</span>
+          <span></span>
         </td>
       </tr>
     </table>
