--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <tr>
         <td class="column1">
           Контактный телефон
-          <span></span>
+          <span>8888888888</span>
         </td>
-        <td class="column2">Текст во второй колонке</td>
+        <td class="column2">СТОИМОСТЬ</td>
       </tr>
       <tr>
         <td class="column1">
