--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <table>
       <tr>
         <td class="column1">
-          Контактный телефон
-          <span>8888888888</span>
+          <div class="col-item">
+            <p>Контактный телефон</p>
+            <span>8888888888</span>
+          </div>
         </td>
         <td class="column2">СТОИМОСТЬ</td>
       </tr>
