--- a/index.html
+++ b/index.html
@@ -13,29 +13,37 @@
         <td class="column1">
           <div class="col-item">
             <p>Контактный телефон</p>
-            <span>8888888888</span>
+            <span></span>
           </div>
         </td>
         <td class="column2">СТОИМОСТЬ</td>
       </tr>
       <tr>
         <td class="column1">
-          Оправа
-          <span></span>
+          <div class="col-item">
+            <p>Оправа</p>
+            <span></span>
+          </div>
         </td>
         <td class="column2">
-          оправа
-          <span></span>
+          <div class="col-item">
+            <p>оправа</p>
+            <span></span>
+          </div>
         </td>
       </tr>
       <tr>
         <td class="column1">
-          линзы
-          <span></span>
+          <div class="col-item">
+            <p>Линзы</p>
+            <span></span>
+          </div>
         </td>
         <td class="column2">
-          линзы
-          <span></span>
+          <div class="col-item">
+            <p>линзы</p>
+            <span></span>
+          </div>
         </td>
       </tr>
       <tr>
