--- a/index.html
+++ b/index.html
@@ -11,39 +11,29 @@
     <table>
       <tr>
         <td class="column1">
-          <div class="col-item">
-            <p>Контактный телефон</p>
-            <span></span>
-          </div>
+          Контактный телефон
+          <span>888888888888</span>
         </td>
         <td class="column2">СТОИМОСТЬ</td>
       </tr>
       <tr>
         <td class="column1">
-          <div class="col-item">
-            <p>Оправа</p>
-            <span></span>
-          </div>
+          Оправа
+          <span></span>
         </td>
         <td class="column2">
-          <div class="col-item">
-            <p>оправа</p>
-            <span></span>
-          </div>
+          оправа
+          <span></span>
         </td>
       </tr>
       <tr>
         <td class="column1">
-          <div class="col-item">
-            <p>Линзы</p>
-            <span></span>
-          </div>
+          Линзы
+          <span></span>
         </td>
         <td class="column2">
-          <div class="col-item">
-            <p>линзы</p>
-            <span></span>
-          </div>
+          линзы
+          <span></span>
         </td>
       </tr>
       <tr>
