--- a/index.html
+++ b/index.html
@@ -8,101 +8,105 @@
     />
   </head>
   <body>
-    <table>
-      <tr>
-        <td class="column1">
-          Контактный телефон
-          <span>888888888888</span>
-        </td>
-        <td class="column2">СТОИМОСТЬ</td>
-      </tr>
-      <tr>
-        <td class="column1">
-          Оправа
-          <span></span>
-        </td>
-        <td class="column2">
-          оправа
-          <span></span>
-        </td>
-      </tr>
-      <tr>
-        <td class="column1">
-          Линзы
-          <span></span>
-        </td>
-        <td class="column2">
-          линзы
-          <span></span>
-        </td>
-      </tr>
-      <tr>
-        <td class="column1">_________________</td>
-        <td class="column2">
-          работа
-          <span></span>
-        </td>
-      </tr>
-      <tr>
-        <td class="column1">
-          OD sph
-          <span></span>
-          cyl
-          <span></span>
-          ax
-          <span></span>
-          рц
-          <span></span>
-        </td>
-        <td class="column2">
-          сумма
-          <span></span>
-        </td>
-      </tr>
-      <tr>
-        <td class="column1">
-          OS sph
-          <span></span>
-          cyl
-          <span></span>
-          ax
-          <span></span>
-        </td>
-        <td class="column2">
-          скидка
-          <span></span>
-        </td>
-      </tr>
-      <tr>
-        <td class="column1">
-          Примечание
-          <span></span>
-        </td>
-        <td class="column2">
-          Итого
-          <span></span>
-        </td>
-      </tr>
-      <tr>
-        <td class="column1">
-          Дата приема
-          <span></span>
-        </td>
-        <td class="column2">
-          оплачено
-          <span></span>
-        </td>
-      </tr>
-      <tr>
-        <td class="column1">
-          Дата выдачи
-          <span></span>
-        </td>
-        <td class="column2">
-          доплата
-          <span></span>
-        </td>
-      </tr>
-    </table>
+    <div class="n-wrapp">
+      <table>
+        <tr>
+          <td class="column1">
+            Контактный телефон
+            <span>888888888888</span>
+          </td>
+          <td class="column2">СТОИМОСТЬ</td>
+        </tr>
+        <tr>
+          <td class="column1">
+            Оправа
+            <span></span>
+          </td>
+          <td class="column2">
+            оправа
+            <span></span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            Линзы
+            <span></span>
+          </td>
+          <td class="column2">
+            линзы
+            <span></span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">_________________</td>
+          <td class="column2">
+            работа
+            <span></span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            OD sph
+            <span>222</span>
+            cyl
+            <span>222</span>
+            ax
+            <span>222</span>
+            <span class="n-end">
+              рц
+              <span>2222</span>
+            </span>
+          </td>
+          <td class="column2">
+            сумма
+            <span></span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            OS sph
+            <span></span>
+            cyl
+            <span></span>
+            ax
+            <span></span>
+          </td>
+          <td class="column2">
+            скидка
+            <span></span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            Примечание
+            <span></span>
+          </td>
+          <td class="column2">
+            Итого
+            <span></span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            Дата приема
+            <span></span>
+          </td>
+          <td class="column2">
+            оплачено
+            <span></span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            Дата выдачи
+            <span></span>
+          </td>
+          <td class="column2">
+            доплата
+            <span></span>
+          </td>
+        </tr>
+      </table>
+    </div>
   </body>
 </html>
