--- a/index.html
+++ b/index.html
@@ -13,63 +13,63 @@
         <tr>
           <td class="column1">
             Контактный телефон
-            <span>888888888888</span>
+            <span class="n-price">888888888888</span>
           </td>
           <td class="column2">СТОИМОСТЬ</td>
         </tr>
         <tr>
           <td class="column1">
             Оправа
-            <span></span>
+            <span class="n-price">Своя</span>
           </td>
           <td class="column2">
             оправа
-            <span></span>
+            <span class="n-price">4000</span>
           </td>
         </tr>
         <tr>
           <td class="column1">
             Линзы
-            <span></span>
+            <span class="n-price">4000</span>
           </td>
           <td class="column2">
             линзы
-            <span></span>
+            <span class="n-price">4000</span>
           </td>
         </tr>
         <tr>
           <td class="column1">_________________</td>
           <td class="column2">
             работа
-            <span></span>
+            <span class="n-price"> 4000</span>
           </td>
         </tr>
         <tr>
           <td class="column1">
             OD sph
-            <span>222</span>
+            <span class="n-price">222</span>
             cyl
-            <span>222</span>
+            <span class="n-price">222</span>
             ax
-            <span>222</span>
+            <span class="n-price">222</span>
             <span class="n-end">
               рц
-              <span>2222</span>
+              <span class="n-price">2222</span>
             </span>
           </td>
           <td class="column2">
             сумма
-            <span></span>
+            <span class="n-price">4000</span>
           </td>
         </tr>
         <tr>
           <td class="column1">
             OS sph
-            <span></span>
+            <span class="n-price">4000</span>
             cyl
-            <span></span>
+            <span class="n-price">4000</span>
             ax
-            <span></span>
+            <span class="n-price">4000</span>
           </td>
           <td class="column2">
             скидка
@@ -83,27 +83,27 @@
           </td>
           <td class="column2">
             Итого
-            <span></span>
+            <span class="n-price">4000</span>
           </td>
         </tr>
         <tr>
           <td class="column1">
             Дата приема
-            <span></span>
+            <span class="n-price">4000</span>
           </td>
           <td class="column2">
             оплачено
-            <span></span>
+            <span class="n-price">4000</span>
           </td>
         </tr>
         <tr>
           <td class="column1">
             Дата выдачи
-            <span></span>
+            <span class="n-price">4000</span>
           </td>
           <td class="column2">
             доплата
-            <span></span>
+            <span class="n-price">4000</span>
           </td>
         </tr>
       </table>
