--- a/index.html
+++ b/index.html
@@ -107,6 +107,105 @@
           </td>
         </tr>
       </table>
+
+      <table>
+        <tr>
+          <td class="column1">
+            Контактный телефон
+            <span class="n-price">888888888888</span>
+          </td>
+          <td class="column2">СТОИМОСТЬ</td>
+        </tr>
+        <tr>
+          <td class="column1">
+            Оправа
+            <span class="n-price">Своя</span>
+          </td>
+          <td class="column2">
+            оправа
+            <span class="n-price">4000</span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            Линзы
+            <span class="n-price">4000</span>
+          </td>
+          <td class="column2">
+            линзы
+            <span class="n-price">4000</span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">_________________</td>
+          <td class="column2">
+            работа
+            <span class="n-price"> 4000</span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            OD sph
+            <span class="n-price">222</span>
+            cyl
+            <span class="n-price">222</span>
+            ax
+            <span class="n-price">222</span>
+            <span class="n-end">
+              рц
+              <span class="n-price">2222</span>
+            </span>
+          </td>
+          <td class="column2">
+            сумма
+            <span class="n-price">4000</span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            OS sph
+            <span class="n-price">4000</span>
+            cyl
+            <span class="n-price">4000</span>
+            ax
+            <span class="n-price">4000</span>
+          </td>
+          <td class="column2">
+            скидка
+            <span></span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            Примечание
+            <span></span>
+          </td>
+          <td class="column2">
+            Итого
+            <span class="n-price">4000</span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            Дата приема
+            <span class="n-price">4000</span>
+          </td>
+          <td class="column2">
+            оплачено
+            <span class="n-price">4000</span>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            Дата выдачи
+            <span class="n-price">4000</span>
+          </td>
+          <td class="column2">
+            доплата
+            <span class="n-price">4000</span>
+          </td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
