--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <span class="n-price">888888888888</span>
             </div>
           </td>
-          <td class="column2">СТОИМОСТЬ</td>
+          <td class="column2 n-bold">СТОИМОСТЬ</td>
         </tr>
         <tr>
           <td class="column1">
@@ -105,7 +105,139 @@
             </div>
           </td>
           <td class="column2">
+            <div class="content-wrapper n-bold">
+              Итого
+              <span class="n-price">4000</span>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
             <div class="content-wrapper">
+              Дата приема
+              <span class="n-price">4000</span>
+            </div>
+          </td>
+          <td class="column2">
+            <div class="content-wrapper">
+              оплачено
+              <span class="n-price">4000</span>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            <div class="content-wrapper">
+              Дата выдачи
+              <span class="n-price">4000</span>
+            </div>
+          </td>
+          <td class="column2">
+            <div class="content-wrapper">
+              доплата
+              <span class="n-price">4000</span>
+            </div>
+          </td>
+        </tr>
+      </table>
+
+      <table>
+        <tr>
+          <td class="column1">
+            <div class="content-wrapper">
+              Контактный телефон
+              <span class="n-price">888888888888</span>
+            </div>
+          </td>
+          <td class="column2 n-bold">СТОИМОСТЬ</td>
+        </tr>
+        <tr>
+          <td class="column1">
+            <div class="content-wrapper">
+              Оправа
+              <span class="n-price">Своя</span>
+            </div>
+          </td>
+          <td class="column2">
+            <div class="content-wrapper">
+              оправа
+              <span class="n-price">4000</span>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            <div class="content-wrapper">
+              Линзы
+              <span class="n-price">4000</span>
+            </div>
+          </td>
+          <td class="column2">
+            <div class="content-wrapper">
+              линзы
+              <span class="n-price">4000</span>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            <div class="content-wrapper">
+              &#160;
+              <span class="n-price"></span>
+            </div>
+          </td>
+          <td class="column2">
+            <div class="content-wrapper">
+              работа
+              <span class="n-price"> 4000</span>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            OD sph
+            <span class="n-price">222</span>
+            cyl
+            <span class="n-price">222</span>
+            ax
+            <span class="n-price">222</span>
+            <span class="n-end">
+              рц
+              <span class="n-price">2222</span>
+            </span>
+          </td>
+          <td class="column2">
+            <div class="content-wrapper">
+              сумма
+              <span class="n-price">4000</span>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            OS sph
+            <span class="n-price">4000</span>
+            cyl
+            <span class="n-price">4000</span>
+            ax
+            <span class="n-price">4000</span>
+          </td>
+          <td class="column2">
+            <div class="content-wrapper">
+              скидка
+              <span class="n-price"></span>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="column1">
+            <div class="content-wrapper">
+              Примечание
+              <span class="n-price">400</span>
+            </div>
+          </td>
+          <td class="column2">
+            <div class="content-wrapper n-bold">
               Итого
               <span class="n-price">4000</span>
             </div>
