--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
         </tr>
       </table>
     </div>
-    <div class="blank__manual"></div>
+    <div class="n-manual">
+      <p class="n-manual-title">Подпись Консультанта_________________</p>
+      <p class="n-manual-subtitle">ПРАВИЛА ЭКСПЛУАТАЦИИ ОЧКОВ</p>
+    </div>
   </body>
 </html>
