--- a/index.html
+++ b/index.html
@@ -140,10 +140,62 @@
           </td>
         </tr>
       </table>
-    </div>
-    <div class="n-manual">
-      <p class="n-manual-title">Подпись Консультанта_________________</p>
-      <p class="n-manual-subtitle">ПРАВИЛА ЭКСПЛУАТАЦИИ ОЧКОВ</p>
+      <div class="n-manual">
+        <p class="n-manual-title">Подпись Консультанта_________________</p>
+        <p class="n-manual-subtitle">ПРАВИЛА ЭКСПЛУАТАЦИИ ОЧКОВ</p>
+        <ul class="n-manual-list">
+          <li>
+            1. Не кладите очки линзами на твердую поверхность, это приведёт к
+            появлению царапин.
+          </li>
+          <li>
+            2. Не подвергайте очковые линзы сильному нагреву (по ГОСТу РФ не
+            выше +50 С):
+          </li>
+          <li>&#160;&#160;&#160;&#160;- в бане, сауне</li>
+          <li>
+            &#160;&#160;&#160;&#160;- на приборной панели автомобиля в солнечный
+            день
+          </li>
+          <li>&#160;&#160;&#160;&#160;- при сушке волос феном</li>
+          <li>
+            3. Не допускайте попадания на очковые линзы лака для волос,
+            косметики, морской воды, мыла и других жидкостей содержащих
+            растворители. Все это может привести к неисправимому повреждению
+            покрытия линз и оправы!
+          </li>
+          <li>4. Очки должны храниться в футляре.</li>
+          <li>
+            5. Для ухода за линзами используйте специальные салфетки, растворы
+            или теплую воду. Заказ получен, претензий по качеству не имею. С
+            правилами эксплуатации ознакомлен.
+          </li>
+        </ul>
+        <p class="n-manual-title">Подпись заказчика_________________</p>
+        <p class="n-manual-subtitle">ПАМЯТКА ДЛЯ ПОКУПАТЕЛЯ:</p>
+        <ul class="n-manual-list">
+          <li>
+            1. Изготовитель гарантирует надежность соединения линз с оправой в
+            течении 6 мес.со дня получения очков при соблюдении потребителем
+            правил эксплуатации. Механические повреждения оправ и разбитые
+            стекла не могут являться основанием для претензий. Изготовитель не
+            несет ответственности за недостатки, возникшие после принятия товара
+            потребителем (ст.29,п.4 закона РФ "О защите прав потребителей")
+          </li>
+          <li>
+            2. Линзы - предмет медицинского назначения индивидуального
+            пользования, попадают в перечень товаров надлежащего качества,
+            возврату и обмену не подлежат. (Постановление Правительства РФ № 55
+            от 19.01.1998 г. ст. № 25 Закона о защите прав потребителей РФ).
+          </li>
+          <li>
+            3. При отказе от изготовленных очков по причинам, не связанным с
+            виной изготовителя, с заказчика удерживается стоимость линз
+            (Постановление Правительства РФ № 55 19.01.1998 г.) и работы по
+            изготовлению очков (ст. № 32 ФЗ "О защите прав потребителей"
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
