--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
             </div>
           </td>
         </tr>
+        <tr>
+          <td class="column1">
+            <div class="content-wrapper">&#160;</div>
+          </td>
+          <td class="column2">
+            <div class="content-wrapper">&#160;</div>
+          </td>
+        </tr>
       </table>
       <div class="n-manual">
         <p class="n-manual-title">Подпись Консультанта_________________</p>
