--- a/index.html
+++ b/index.html
@@ -26,8 +26,20 @@
               </div>
             </div>
           </div>
+          <div class="n-top-data">
+            <div class="n-top-inner">
+              <div class="n-data-item">
+                Тел:
+                <span class="n-price">+7 977 888 77 66</span>
+              </div>
+              <div class="n-table n-data-item">
+                №
+                <span class="n-price">888888888888</span>
+              </div>
+            </div>
+          </div>
         </div>
-        <table>
+        <table class="n-table">
           <tr>
             <td class="column1">
               <div class="content-wrapper">
