--- a/index.html
+++ b/index.html
@@ -27,18 +27,14 @@
             </div>
           </div>
           <table class="n-table">
-            <td class="column1 n-column1">
-              <div class="content-wrapper">
+            <tr>
+              <td class="column1">
                 Тел:
                 <span class="n-price">+7 977 888 77 66</span>
-              </div>
-            </td>
-            <td class="column1 n-column1">
-              <div class="content-wrapper">
                 № заказа
                 <span class="n-price"></span>
-              </div>
-            </td>
+              </td>
+            </tr>
           </table>
         </div>
         <!---->
