--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <tr>
               <td class="column1">
                 Тел:
-                <span class="n-price">+7 977 888 77 66</span>
+                <span class="n-price n-indent">+7 977 888 77 66</span>
                 № заказа
-                <span class="n-price"></span>
+                <span class="n-price n-top-price"></span>
               </td>
             </tr>
           </table>
