--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <td class="column1">
               <div class="content-wrapper">
                 Контактный телефон
-                <span class="n-price">888888888888</span>
+                <span class="n-price"></span>
               </div>
             </td>
             <td class="column2 n-bold">СТОИМОСТЬ</td>
