--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
                 <span class="n-price n-top-price"></span>
               </td>
             </tr>
+            <tr>
+              <td class="column1">
+                <div class="content-wrapper">
+                  ФИО клиента
+                  <span class="n-price"></span>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td class="column1">
+                <div class="content-wrapper">
+                  Для кого
+                  <span class="n-price"></span>
+                </div>
+              </td>
+            </tr>
           </table>
         </div>
         <!---->
