--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
           </div>
           <table class="n-table">
             <tr>
-              <td class="column1">
-                Тел:
-                <span class="n-price n-indent">+7 977 888 77 66</span>
+              <td class="column1 n-column1">
+                <span class="n-span"> Тел: +7 977 888 77 66 </span>
+                <!-- <span class="n-price n-indent">+7 977 888 77 66</span> -->
                 № заказа
-                <span class="n-price n-top-price"></span>
+                <span class="n-price n-top-price">88888</span>
               </td>
             </tr>
             <tr>
