--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
           </tr>
         </table>
         <div class="n-manual">
+          <img class="print" src="pechat.png" alt="печать" />
           <p class="n-manual-title">Подпись Консультанта_________________</p>
           <p class="n-manual-subtitle">ПРАВИЛА ЭКСПЛУАТАЦИИ ОЧКОВ</p>
           <ul class="n-manual-list">
