--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="n-container">
+      <!--block-->
       <div class="n-wrapp">
         <div class="n-top">
           <div class="n-top-item">
@@ -194,6 +195,251 @@
           </tr>
         </table>
         <div class="n-manual">
+          <img class="print" src="pechat.png" alt="печать" />
+          <p class="n-manual-title">Подпись Консультанта_________________</p>
+          <p class="n-manual-subtitle">ПРАВИЛА ЭКСПЛУАТАЦИИ ОЧКОВ</p>
+          <ul class="n-manual-list">
+            <li>
+              1. Не кладите очки линзами на твердую поверхность, это приведёт к
+              появлению царапин.
+            </li>
+            <li>
+              2. Не подвергайте очковые линзы сильному нагреву (по ГОСТу РФ не
+              выше +50 С):
+            </li>
+            <li>&#160;&#160;&#160;&#160;- в бане, сауне</li>
+            <li>
+              &#160;&#160;&#160;&#160;- на приборной панели автомобиля в
+              солнечный день
+            </li>
+            <li>&#160;&#160;&#160;&#160;- при сушке волос феном</li>
+            <li>
+              3. Не допускайте попадания на очковые линзы лака для волос,
+              косметики, морской воды, мыла и других жидкостей содержащих
+              растворители. Все это может привести к неисправимому повреждению
+              покрытия линз и оправы!
+            </li>
+            <li>4. Очки должны храниться в футляре.</li>
+            <li>
+              5. Для ухода за линзами используйте специальные салфетки, растворы
+              или теплую воду. Заказ получен, претензий по качеству не имею. С
+              правилами эксплуатации ознакомлен.
+            </li>
+          </ul>
+          <p class="n-manual-title">Подпись заказчика_________________</p>
+          <p class="n-manual-subtitle">ПАМЯТКА ДЛЯ ПОКУПАТЕЛЯ:</p>
+          <ul class="n-manual-list">
+            <li>
+              1. Изготовитель гарантирует надежность соединения линз с оправой в
+              течении 6 мес.со дня получения очков при соблюдении потребителем
+              правил эксплуатации. Механические повреждения оправ и разбитые
+              стекла не могут являться основанием для претензий. Изготовитель не
+              несет ответственности за недостатки, возникшие после принятия
+              товара потребителем (ст.29,п.4 закона РФ "О защите прав
+              потребителей")
+            </li>
+            <li>
+              2. Линзы - предмет медицинского назначения индивидуального
+              пользования, попадают в перечень товаров надлежащего качества,
+              возврату и обмену не подлежат. (Постановление Правительства РФ №
+              55 от 19.01.1998 г. ст. № 25 Закона о защите прав потребителей
+              РФ).
+            </li>
+            <li>
+              3. При отказе от изготовленных очков по причинам, не связанным с
+              виной изготовителя, с заказчика удерживается стоимость линз
+              (Постановление Правительства РФ № 55 19.01.1998 г.) и работы по
+              изготовлению очков (ст. № 32 ФЗ "О защите прав потребителей"
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!--block-->
+      <div class="n-wrapp">
+        <div class="n-top">
+          <div class="n-top-item">
+            <div class="n-top-logo">
+              <img src="look_optics.png" alt="logo" />
+            </div>
+            <div class="n-top-contact">
+              <div class="n-contact-item">
+                <img src="insta_icon.png" alt="icon" />
+                <p>@luk_optika</p>
+              </div>
+              <div class="n-contact-item">
+                <img src="mail_icon.png" alt="icon" />
+                <p>www.lukoptika.ru</p>
+              </div>
+            </div>
+          </div>
+          <table class="n-table">
+            <tr>
+              <td class="column1 n-column1">
+                <span class="n-span"> Тел: +7 977 888 77 66 </span>
+                <!-- <span class="n-price n-indent">+7 977 888 77 66</span> -->
+                № заказа
+                <span class="n-price n-top-price">88888</span>
+              </td>
+            </tr>
+            <tr>
+              <td class="column1">
+                <div class="content-wrapper">
+                  ФИО клиента
+                  <span class="n-price"></span>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td class="column1">
+                <div class="content-wrapper">
+                  Для кого
+                  <span class="n-price"></span>
+                </div>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <!---->
+        <table class="n-table">
+          <tr>
+            <td class="column1">
+              <div class="content-wrapper">
+                Контактный телефон
+                <span class="n-price"></span>
+              </div>
+            </td>
+            <td class="column2 n-bold">СТОИМОСТЬ</td>
+          </tr>
+          <tr>
+            <td class="column1">
+              <div class="content-wrapper">
+                Оправа
+                <span class="n-price">Своя</span>
+              </div>
+            </td>
+            <td class="column2">
+              <div class="content-wrapper">
+                оправа
+                <span class="n-price">4000</span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="column1">
+              <div class="content-wrapper">
+                Линзы
+                <span class="n-price">4000</span>
+              </div>
+            </td>
+            <td class="column2">
+              <div class="content-wrapper">
+                линзы
+                <span class="n-price">4000</span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="column1">
+              <div class="content-wrapper">
+                &#160;
+                <span class="n-price"></span>
+              </div>
+            </td>
+            <td class="column2">
+              <div class="content-wrapper">
+                работа
+                <span class="n-price"> 4000</span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="column1">
+              OD sph
+              <span class="n-price">222</span>
+              cyl
+              <span class="n-price">222</span>
+              ax
+              <span class="n-price">222</span>
+              <span class="n-end">
+                рц
+                <span class="n-price">2222</span>
+              </span>
+            </td>
+            <td class="column2">
+              <div class="content-wrapper">
+                сумма
+                <span class="n-price">4000</span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="column1">
+              OS sph
+              <span class="n-price">4000</span>
+              cyl
+              <span class="n-price">4000</span>
+              ax
+              <span class="n-price">4000</span>
+            </td>
+            <td class="column2">
+              <div class="content-wrapper">
+                скидка
+                <span class="n-price"></span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="column1">
+              <div class="content-wrapper">
+                Примечание
+                <span class="n-price">400</span>
+              </div>
+            </td>
+            <td class="column2">
+              <div class="content-wrapper n-bold">
+                Итого
+                <span class="n-price">4000</span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="column1">
+              <div class="content-wrapper">
+                Дата приема
+                <span class="n-price">4000</span>
+              </div>
+            </td>
+            <td class="column2">
+              <div class="content-wrapper">
+                оплачено
+                <span class="n-price">4000</span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="column1">
+              <div class="content-wrapper">
+                Дата выдачи
+                <span class="n-price">4000</span>
+              </div>
+            </td>
+            <td class="column2">
+              <div class="content-wrapper">
+                доплата
+                <span class="n-price">4000</span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="column1">
+              <div class="content-wrapper">&#160;</div>
+            </td>
+            <td class="column2">
+              <div class="content-wrapper">&#160;</div>
+            </td>
+          </tr>
+        </table>
+        <div class="n-manual n-manual-2">
           <img class="print" src="pechat.png" alt="печать" />
           <p class="n-manual-title">Подпись Консультанта_________________</p>
           <p class="n-manual-subtitle">ПРАВИЛА ЭКСПЛУАТАЦИИ ОЧКОВ</p>
