--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <div class="n-top-contact">
                 <div class="n-contact-item">
                   <img src="insta_icon.png" alt="icon" />
-                  <p>@luk_optika</p>
+                  <p>t.me/lukoptika</p>
                 </div>
                 <div class="n-contact-item">
                   <img src="mail_icon.png" alt="icon" />
@@ -248,7 +248,7 @@
               РФ).
             </li>
             <li>
-              3. При отказе от изготовленных очков по причинам, не связанным с
+              3. При отказе от изготовленных очков по причинам, не связанных с
               виной изготовителя, с заказчика удерживается стоимость линз
               (Постановление Правительства РФ № 55 19.01.1998 г.) и работы по
               изготовлению очков (ст. № 32 ФЗ "О защите прав потребителей"
@@ -267,7 +267,7 @@
               <div class="n-top-contact">
                 <div class="n-contact-item">
                   <img src="insta_icon.png" alt="icon" />
-                  <p>@luk_optika</p>
+                  <p>t.me/lukoptika</p>
                 </div>
                 <div class="n-contact-item">
                   <img src="mail_icon.png" alt="icon" />
@@ -495,7 +495,7 @@
               РФ).
             </li>
             <li>
-              3. При отказе от изготовленных очков по причинам, не связанным с
+              3. При отказе от изготовленных очков по причинам, не связанных с
               виной изготовителя, с заказчика удерживается стоимость линз
               (Постановление Правительства РФ № 55 19.01.1998 г.) и работы по
               изготовлению очков (ст. № 32 ФЗ "О защите прав потребителей"
