--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               3. При отказе от изготовленных очков по причинам, не связанных с
               виной изготовителя, с заказчика удерживается стоимость линз
               (Постановление Правительства РФ № 55 19.01.1998 г.) и работы по
-              изготовлению очков (ст. № 32 ФЗ "О защите прав потребителей"
+              изготовлению очков (ст. № 32 ФЗ "О защите прав потребителей")
             </li>
           </ul>
         </div>
